syntax= "proto3";

package otp;

import "verify-otp.proto";
option java_multiple_files= true;
option java_package= "com.otp.generated.proto";

service Otp {
    rpc VerifyOtp(VerifyOtpRequest) returns(VerifyOtpResponse) { }
}