syntax= "proto3";

package otp;
option java_multiple_files= true;
option java_package= "com.otp.generated.proto";

message VerifyOtpRequest {

    string email= 1;
    string otp= 2;
}

message VerifyOtpResponse {
    oneof optional_error {
        string error= 1;
    }
}